# VoiceAIAgent-Livekit

./: .gitignore  README.md  TaskSummary.md  architecture_diagram.md  pyproject.toml  skills-lock.json
DeveloperDocs/: CallAttendingAgent.md  TaskSummary.md  architecture_diagram.puml  twilio-integration.md  zoom.md
calllogs/: .gitkeep
livekitCliScripts/: outbound-trunk-zoom.json
scripts/: dial_zoom.py
src/: __init__.py  agent.py  call_attending_agent.py  call_manager.py  cli.py  zoom_dialer.py
tests/: __init__.py  test_agent.py  test_call_attending_agent.py
